--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: Lato, sans-serif;
+    background-color: #1b1b32;
+    color: white;
+    font-size: 18px;
+}
